# spell_calculator

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py  models.py  templates.py
app/pages/: spell_overview.py
app/utils/: constants.py
tests/: conftest.py  test_system.py
