[tool.poetry]
name = "python_template"
version = "0.1.0"
description = ""
authors = ["Brian-Bowyer <bobsnake64@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
nicegui = "^1.4.19"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = "tests"
python_functions = "it_*"
addopts = "-x --ff"

[tool.black]
line-length = 90
